[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/stage.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Unit/Follower/eirika.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/terrain.png" type="Texture" id=4]
[ext_resource path="res://Resources/Terrain/meadow.tres" type="Resource" id=5]
[ext_resource path="res://Resources/Terrain/forest.tres" type="Resource" id=6]
[ext_resource path="res://Scenes/Unit/follower.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Unit/summoner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/Dynamic Fonts/ui.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/Unit/gate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/stage_ui.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Unit/enemy.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Unit/Summoner/knoll.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Stage/state_panel.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/state_ui.gd" type="Script" id=15]
[ext_resource path="res://Resources/Terrain/mountain.tres" type="Resource" id=21]

[sub_resource type="TileSet" id=1]
0/name = "tilemap.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilemap.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tilemap.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Stage" type="Node"]
script = ExtResource( 1 )
summoner_template = ExtResource( 8 )
follower_template = ExtResource( 7 )
gate_template = ExtResource( 10 )
enemy_template = ExtResource( 12 )
terrain_types = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 21 ) ]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Unit UI" type="Control" parent="UI"]
margin_left = 992.0
margin_top = -416.0
margin_right = 1032.0
margin_bottom = -376.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/Unit UI"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 448.0
margin_right = 216.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UI/Unit UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 448.0
margin_right = 216.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 9 )
text = "ASDF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Initiative" type="Label" parent="UI/Unit UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 512.0
margin_right = 216.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 9 )
text = "17+12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI/Unit UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 576.0
margin_right = 216.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 9 )
text = "Healthy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terrain UI" type="Control" parent="UI"]
margin_left = 992.0
margin_top = 480.0
margin_right = 1032.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/Terrain UI"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_right = 216.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UI/Terrain UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_right = 216.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 9 )
text = "Terrain"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Initiative Bonus" type="Label" parent="UI/Terrain UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 9 )
text = "INI *3.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Movement Cost" type="Label" parent="UI/Terrain UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 128.0
margin_right = 216.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 9 )
text = "DEF *2.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State UI" type="Control" parent="UI"]
margin_left = 32.0
margin_top = 288.0
margin_right = 72.0
margin_bottom = 328.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State Panel" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 352.0
margin_right = -40.0
margin_bottom = 312.0

[node name="State Panel2" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 320.0
margin_right = -40.0
margin_bottom = 280.0

[node name="State Panel3" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 288.0
margin_right = -40.0
margin_bottom = 248.0

[node name="State Panel4" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 256.0
margin_right = -40.0
margin_bottom = 216.0

[node name="State Panel5" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 224.0
margin_right = -40.0
margin_bottom = 184.0

[node name="State Panel6" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 192.0
margin_right = -40.0
margin_bottom = 152.0

[node name="State Panel7" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 160.0
margin_right = -40.0
margin_bottom = 120.0

[node name="State Panel8" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 128.0
margin_right = -40.0
margin_bottom = 88.0

[node name="State Panel9" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 96.0
margin_right = -40.0
margin_bottom = 56.0

[node name="State Panel10" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 64.0
margin_right = -40.0
margin_bottom = 24.0

[node name="State Panel11" parent="UI/State UI" instance=ExtResource( 14 )]
margin_top = 32.0
margin_right = -40.0
margin_bottom = -8.0

[node name="State Panel12" parent="UI/State UI" instance=ExtResource( 14 )]
margin_right = -40.0
margin_bottom = -40.0

[node name="Terrain" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 1, 0, 262150, 1, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 1, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 1, 0, 458759, 1, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 0, 0, 589834, 0, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0 )

[node name="Units" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="Units"]

[node name="Summoners" type="Node2D" parent="Units/Player"]
position = Vector2( 0, 320 )

[node name="Knoll" parent="Units/Player/Summoners" instance=ExtResource( 13 )]
position = Vector2( 192, 0 )
max_hp = 1
hp = 1
max_ini = 8
ini = 8

[node name="Followers" type="Node2D" parent="Units/Player"]

[node name="Eirika" parent="Units/Player/Followers" instance=ExtResource( 2 )]
position = Vector2( 320, 320 )

[node name="Enemy" type="Node2D" parent="Units"]

[node name="Gates" type="Node2D" parent="Units/Enemy"]

[node name="Enemies" type="Node2D" parent="Units/Enemy"]

[node name="Cursor" parent="." instance=ExtResource( 3 )]
rapid_fire_wait = 10
[connection signal="redo_issued" from="." to="UI/State UI" method="_on_Stage_redo_issued"]
[connection signal="undo_issued" from="." to="UI/State UI" method="_on_Stage_undo_issued"]
[connection signal="cancel_issued" from="Cursor" to="." method="_on_Cursor_cancel_issued"]
[connection signal="confirm_issued" from="Cursor" to="." method="_on_Cursor_confirm_issued"]
[connection signal="moved" from="Cursor" to="." method="_on_Cursor_moved"]
